--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,54 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <!-- Meta Tags -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Google Fonsts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Gemunu+Libre:wght@400;700&family=Open+Sans&display=swap" rel="stylesheet"/>
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- Tailwind CSS -->
     <link href="./css/styles.css" rel="stylesheet" />
+    <title>My Tailwind CSS Website</title>
   </head>
   <body>
-    <h1 class="text-3xl font-bold">Hello world!</h1>
+    <!-- Header -->
+    <header class="bg-black py-12 text-vage-grey font-gemunu uppercase">
+      <!-- Header Container -->
+      <div class="container flex items-center justify-between space-x-16">
+        <!-- Logo -->
+        <a href="#" class="text-6xl font-bold text-transparent bg-gradient-to-r bg-clip-text from-vage-red to-vage-grey">VEGE</a>
+        <!-- Nav -->
+        <nav class="flex justify-between flex-1">
+          <!-- Nav Links -->
+            <div class="flex items-center text-lg space-x-8">
+              <a href="#" class="hover:text-vage-melon transition duration-500">movies</a>
+              <a href="#" class="hover:text-vage-melon transition duration-500">celebrities</a>
+              <a href="#" class="hover:text-vage-melon transition duration-500">blog</a>
+              <a href="#" class="hover:text-vage-melon transition duration-500">about</a>
+            </div>
+          <!-- Login -->
+            <div class="flex items-center space-x-8">
+              <!-- Search-->
+              <form>
+                <div class="group border-r px-4 mx-4 py-1 border-vage-red">
+                  <input type="text" class="opacity-0 group-hover:opacity-100 bg-transparent border-b border-vage-red focus:outline-none w-44 transition duration-500" />
+                  <button class="-ml-4 group-hover:ml-0 transition duration-500"><i class="fas fa-search group-hover:text-vage-red transition duration-500"></i></button>
+                </div>
+              </form>
+              <!-- Signup -->
+              <div class="flex items-center space-x-8 text-lg">
+                <a href="#">Login</a>
+                <a href="#" class="bg-vage-red px-3 py-1 hover:bg-rose-600 hover:text-vage-grey cursor-pointer transition duration-500">Sign Up</a>
+
+              </div>
+            </div>
+        </nav>
+      </div>
+    </header>
   </body>
 </html>
