--- a/public/index.html
+++ b/public/index.html
@@ -59,34 +59,34 @@
     </header>
 
     <!-- Hero -->
-    <section class="h-128 group relative">
+    <section class="h-64 md:h-95 lg:h-128 group relative">
       <!-- Hero Image -->
       <img src="./images/batman.jpg" alt="hero" class="w-full h-full object-cover" />
       <!-- Hero Content -->
       <div class="absolute bottom-0 w-full bg-gradient-to-b from-transparent to-black">
         <!-- Hero Container -->
-        <div class="container">
+        <div class="container pl-10 lg:pl-0">
           <h3 class="text-vage-melon tracking-wider group-hover:mb-1 duration-500">
             Action, Adventure, Fantasy
           </h3>
-          <h1 class="text-6xl text-vage-grey group-hover:mb-1 duration-500">
+          <h1 class="text-4xl lg:text-6xl text-vage-grey group-hover:mb-1 duration-500">
             The Dark Knight 
           </h1>
-          <p class="text-vage-grey group-hover:mb-2 duration-500 w-2/3">
+          <p class="text-vage-grey group-hover:mb-2 duration-500 text-sm lg:text-base w-3/4  lg:w-2/3">
             When the menace known as the Joker wreaks havoc and chaos on the people of Gotham, Batman must accept one of the greatest psychological and physical tests of his ability to fight injustice. 
           </p>
           <!--Detail Container-->
-          <div class="flex space-x-8 opacity-0 group-hover:opacity-100 group-hover:mb-20 duration-1000">
+          <div class="flex space-x-8 opacity-0 group-hover:opacity-100 group-hover:mb-10 lg:group-hover:mb-20 duration-1000">
             <!--Watch-->
             <div class="flex space-x-2 items-center cursor-pointer">
-              <a href="#" class="text-vage-grey uppercase text-lg hover\:text-vage-red duration-500">watch trailer</a>
+              <a href="#" class="text-vage-grey uppercase lg:text-lg hover\:text-vage-red duration-500">watch trailer</a>
               <div class="flex h-8 w-8 text-center items-center rounded-full justify-center bg-vage-red text-vage-grey">
                 <i class="fas fa-play"></i>
               </div>
             </div>
              <!--Synopsis-->
              <div class="flex space-x-2 items-center cursor-pointer">
-              <a href="#" class="text-vage-grey uppercase text-lg hover\:text-vage-red duration-500">FULL SYNOPSIS</a>
+              <a href="#" class="text-vage-grey uppercase lg:text-lg hover\:text-vage-red duration-500">FULL SYNOPSIS</a>
               <div class="flex h-8 w-8 text-center items-center rounded-full justify-center bg-vage-red text-vage-grey">
                 <i class="fas fa-arrow-right"></i>
               </div>
@@ -96,10 +96,10 @@
       </div>
       <!-- Points -->
       <div class="flex space-x-3 absolute bottom-5 left-10 opacity-0 group-hover:opacity-100 duration-1000">
-        <div class="w-4 h-4 rounded-full bg-vage-red"></div>
-        <div class="w-4 h-4 rounded-full bg-vage-grey"></div>
-        <div class="w-4 h-4 rounded-full bg-vage-grey"></div>
-        <div class="w-4 h-4 rounded-full bg-vage-grey"></div>
+        <div class="w-3 h-3 lg:w-4 lg:h-4 rounded-full bg-vage-red"></div>
+        <div class="w-3 h-3 lg:w-4 lg:h-4 rounded-full bg-vage-grey"></div>
+        <div class="w-3 h-3 lg:w-4 lg:h-4 rounded-full bg-vage-grey"></div>
+        <div class="w-3 h-3 lg:w-4 lg:h-4 rounded-full bg-vage-grey"></div>
       </div>
     </section>
   </body>
