--- a/public/index.html
+++ b/public/index.html
@@ -102,5 +102,112 @@
         <div class="w-3 h-3 lg:w-4 lg:h-4 rounded-full bg-vage-grey"></div>
       </div>
     </section>
+
+    <!-- Movies -->
+    <section class="py-24 bg-black">
+      <!-- Movies Content -->
+      <div class="container flex space-x-16">
+        <!-- Left Content -->
+        <div class="basis-2/3">
+          <!-- Title -->
+          <div class="flex space-x-2 divide-x divide-vage-red divide-opacity-50 mb-8">
+            <h2 class="text-vage-red"><a href="#">Latest</a></h2>
+            <h2 class="text-vage-grey pl-2 hover:text-vage-red duration-500 "><a href="#">Populer</a></h2>
+            <h2 class="text-vage-grey pl-2 hover:text-vage-red duration-500 "><a href="#">Best</a></h2>
+          </div>
+          <!-- Images Container -->
+          <div class="flex flex-wrap">
+            <!-- Image 1 -->
+            <div class="group relative overflow-hidden basis-1/3">
+              <img src="./images/mv1.jpg" alt="#" class="group-hover:scale-110 group-hover:opacity-50 duration-500">
+              <!-- Image Detail Container -->
+              <div class="absolute px-6 bottom-8">
+                <h3 class="text-vage-grey group-hover:text-vage-melon group-hover:mb-2 duration-500">oblivion</h3>
+                <p class="text-xs opacity-0 group-hover:opacity-100 group-hover:mb-10 duration-500 text-vage-grey">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Amet, nobis?</p>
+                <!-- Icon Container -->
+                <div class="absolute flex space-x-8 text-vage-grey opacity-0 -bottom-4 group-hover:bottom-2 group-hover:opacity-100 duration-500">
+                  <a class="hover:text-vage-red duration-300 " href="#"><i class="fa-solid fa-play"></i></a>
+                  <a class="hover:text-vage-red duration-300 " href="#"><i class="fa-solid fa-arrow-right"></i></a>
+                </div>
+              </div>
+            </div>
+            <!-- Image 2 -->
+            <div class="group relative overflow-hidden basis-1/3">
+              <img src="./images/mv2.jpg" alt="#" class="group-hover:scale-110 group-hover:opacity-50 duration-500">
+              <!-- Image Detail Container -->
+              <div class="absolute px-6 bottom-8">
+                <h3 class="text-vage-grey group-hover:text-vage-melon group-hover:mb-2 duration-500">oblivion</h3>
+                <p class="text-xs opacity-0 group-hover:opacity-100 group-hover:mb-10 duration-500 text-vage-grey">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Amet, nobis?</p>
+                <!-- Icon Container -->
+                <div class="absolute flex space-x-8 text-vage-grey opacity-0 -bottom-4 group-hover:bottom-2 group-hover:opacity-100 duration-500">
+                  <a class="hover:text-vage-red duration-300 " href="#"><i class="fa-solid fa-play"></i></a>
+                  <a class="hover:text-vage-red duration-300 " href="#"><i class="fa-solid fa-arrow-right"></i></a>
+                </div>
+              </div>
+            </div>
+            <!-- Image 3 -->
+            <div class="group relative overflow-hidden basis-1/3">
+              <img src="./images/mv3.jpg" alt="#" class="group-hover:scale-110 group-hover:opacity-50 duration-500">
+              <!-- Image Detail Container -->
+              <div class="absolute px-6 bottom-8">
+                <h3 class="text-vage-grey group-hover:text-vage-melon group-hover:mb-2 duration-500">oblivion</h3>
+                <p class="text-xs opacity-0 group-hover:opacity-100 group-hover:mb-10 duration-500 text-vage-grey">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Amet, nobis?</p>
+                <!-- Icon Container -->
+                <div class="absolute flex space-x-8 text-vage-grey opacity-0 -bottom-4 group-hover:bottom-2 group-hover:opacity-100 duration-500">
+                  <a class="hover:text-vage-red duration-300 " href="#"><i class="fa-solid fa-play"></i></a>
+                  <a class="hover:text-vage-red duration-300 " href="#"><i class="fa-solid fa-arrow-right"></i></a>
+                </div>
+              </div>
+            </div>
+            <!-- Image 4 -->
+            <div class="group relative overflow-hidden basis-1/3">
+              <img src="./images/mv4.jpg" alt="#" class="group-hover:scale-110 group-hover:opacity-50 duration-500">
+              <!-- Image Detail Container -->
+              <div class="absolute px-6 bottom-8">
+                <h3 class="text-vage-grey group-hover:text-vage-melon group-hover:mb-2 duration-500">oblivion</h3>
+                <p class="text-xs opacity-0 group-hover:opacity-100 group-hover:mb-10 duration-500 text-vage-grey">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Amet, nobis?</p>
+                <!-- Icon Container -->
+                <div class="absolute flex space-x-8 text-vage-grey opacity-0 -bottom-4 group-hover:bottom-2 group-hover:opacity-100 duration-500">
+                  <a class="hover:text-vage-red duration-300 " href="#"><i class="fa-solid fa-play"></i></a>
+                  <a class="hover:text-vage-red duration-300 " href="#"><i class="fa-solid fa-arrow-right"></i></a>
+                </div>
+              </div>
+            </div>
+            <!-- Image 5 -->
+            <div class="group relative overflow-hidden basis-1/3">
+              <img src="./images/mv5.jpg" alt="#" class="group-hover:scale-110 group-hover:opacity-50 duration-500">
+              <!-- Image Detail Container -->
+              <div class="absolute px-6 bottom-8">
+                <h3 class="text-vage-grey group-hover:text-vage-melon group-hover:mb-2 duration-500">oblivion</h3>
+                <p class="text-xs opacity-0 group-hover:opacity-100 group-hover:mb-10 duration-500 text-vage-grey">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Amet, nobis?</p>
+                <!-- Icon Container -->
+                <div class="absolute flex space-x-8 text-vage-grey opacity-0 -bottom-4 group-hover:bottom-2 group-hover:opacity-100 duration-500">
+                  <a class="hover:text-vage-red duration-300 " href="#"><i class="fa-solid fa-play"></i></a>
+                  <a class="hover:text-vage-red duration-300 " href="#"><i class="fa-solid fa-arrow-right"></i></a>
+                </div>
+              </div>
+            </div>
+            <!-- Image 6 -->
+            <div class="group relative overflow-hidden basis-1/3">
+              <img src="./images/mv6.jpg" alt="#" class="group-hover:scale-110 group-hover:opacity-50 duration-500">
+              <!-- Image Detail Container -->
+              <div class="absolute px-6 bottom-8">
+                <h3 class="text-vage-grey group-hover:text-vage-melon group-hover:mb-2 duration-500">oblivion</h3>
+                <p class="text-xs opacity-0 group-hover:opacity-100 group-hover:mb-10 duration-500 text-vage-grey">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Amet, nobis?</p>
+                <!-- Icon Container -->
+                <div class="absolute flex space-x-8 text-vage-grey opacity-0 -bottom-4 group-hover:bottom-2 group-hover:opacity-100 duration-500">
+                  <a class="hover:text-vage-red duration-300 " href="#"><i class="fa-solid fa-play"></i></a>
+                  <a class="hover:text-vage-red duration-300 " href="#"><i class="fa-solid fa-arrow-right"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- Right Content -->
+        <div class="basis-1/3 bg-blue-500">
+          Right Contnet
+        </div>  
+      </div>
+    </section>
   </body>
 </html>
