--- a/public/index.html
+++ b/public/index.html
@@ -204,8 +204,72 @@
           </div>
         </div>
         <!-- Right Content -->
-        <div class="basis-1/3 bg-blue-500">
-          Right Contnet
+        <div class="basis-1/3">
+          <!-- Title -->
+          <h2 class="text-vage-grey mb-8">Hot News</h2>
+          <!-- News Container -->
+          <div class="flex flex-col h-full pb-16 justify-between space-y-4">
+            <!-- Item -->
+            <div class="flex items-center group">
+              <!-- News Images Container-->
+              <div class="basis-1/3 h-full">
+                <img src="./images/new1.jpg" alt="#" class="w-full h-full object-cover">
+              </div>
+              <!--- Item Detail -->
+              <div class="pl-8 basis-2/3 text-vage-grey group-hover:text-vage-melon group-hover:cursor-pointer duration-500">
+                <p class="text-sm">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo, magnam?</p>
+                <p class="text-xs tracking-tighter mt-2 font-bold font-gemunu">ON NOW 07 2023</p>
+              </div>
+            </div>
+            <!-- Item -->
+            <div class="flex items-center group">
+              <!-- News Images Container-->
+              <div class="basis-1/3 h-full">
+                <img src="./images/new1.jpg" alt="#" class="w-full h-full object-cover">
+              </div>
+              <!--- Item Detail -->
+              <div class="pl-8 basis-2/3 text-vage-grey group-hover:text-vage-melon group-hover:cursor-pointer duration-500">
+                <p class="text-sm">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo, magnam?</p>
+                <p class="text-xs tracking-tighter mt-2 font-bold font-gemunu">ON NOW 07 2023</p>
+              </div>
+            </div>
+            <!-- Item -->
+            <div class="flex items-center group">
+              <!-- News Images Container-->
+              <div class="basis-1/3 h-full">
+                <img src="./images/new1.jpg" alt="#" class="w-full h-full object-cover">
+              </div>
+              <!--- Item Detail -->
+              <div class="pl-8 basis-2/3 text-vage-grey group-hover:text-vage-melon group-hover:cursor-pointer duration-500">
+                <p class="text-sm">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo, magnam?</p>
+                <p class="text-xs tracking-tighter mt-2 font-bold font-gemunu">ON NOW 07 2023</p>
+              </div>
+            </div>
+            <!-- Item -->
+            <div class="flex items-center group">
+              <!-- News Images Container-->
+              <div class="basis-1/3 h-full">
+                <img src="./images/new1.jpg" alt="#" class="w-full h-full object-cover">
+              </div>
+              <!--- Item Detail -->
+              <div class="pl-8 basis-2/3 text-vage-grey group-hover:text-vage-melon group-hover:cursor-pointer duration-500">
+                <p class="text-sm">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo, magnam?</p>
+                <p class="text-xs tracking-tighter mt-2 font-bold font-gemunu">ON NOW 07 2023</p>
+              </div>
+            </div>
+            <!-- Item -->
+            <div class="flex items-center group">
+              <!-- News Images Container-->
+              <div class="basis-1/3 h-full">
+                <img src="./images/new1.jpg" alt="#" class="w-full h-full object-cover">
+              </div>
+              <!--- Item Detail -->
+              <div class="pl-8 basis-2/3 text-vage-grey group-hover:text-vage-melon group-hover:cursor-pointer duration-500">
+                <p class="text-sm">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo, magnam?</p>
+                <p class="text-xs tracking-tighter mt-2 font-bold font-gemunu">ON NOW 07 2023</p>
+              </div>
+            </div>
+          </div>
         </div>  
       </div>
     </section>
