--- a/public/index.html
+++ b/public/index.html
@@ -301,5 +301,31 @@
         </div>  
       </div>
     </section>
+
+    <!-- Matrix -->
+    <section class="bg-vage-white">
+      <!-- Matrix Container-->
+      <div class="container flex items-center justify-center relative">
+          <!-- Left Content -->
+          <div class="basis-1/2 ">
+            <img src="./images/matrix.png" alt="#" class="absolute bottom-0">  
+          </div>
+          <!-- Right Content -->
+          <div class="basis-1/2">
+            <!-- Right Content Container -->
+            <div class="flex flex-col justify-center py-10">
+              <h3 class="tracking-wider text-vage-melon">ACTİON, DRAMA, THRILLER</h3>
+              <h2 class="mb-2">Matrix Reloaded</h2>
+              <p class="text-sm mb-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, reprehenderit voluptate eos impedit saepe dignissimos fugit ipsam? Nisi, non commodi.</p>
+              <h3 class="tracking-wider text-vage-red">8 wins 666 nominations</h3>
+            </div>
+          </div>
+          <!-- Oldie -->
+          <div class="absolute -top-12 left-0 w-24 h-24 bg-vage-melon rounded-full text-center flex items-center">
+            <p class="font-gemunu uppercase font-bold text-xl text-vage-red -rotate-45">Oldie & Goldie</p>
+          </div>
+      </div>
+    </section>
+
   </body>
 </html>
