--- a/public/index.html
+++ b/public/index.html
@@ -303,17 +303,17 @@
     </section>
 
     <!-- Matrix -->
-    <section class="bg-vage-white">
+    <section class="bg-vage-white mb-24">
       <!-- Matrix Container-->
-      <div class="container flex items-center justify-center relative">
+      <div class="container flex items-center justify-center relative pl-10 lg:pl-0">
           <!-- Left Content -->
-          <div class="basis-1/2 ">
-            <img src="./images/matrix.png" alt="#" class="absolute bottom-0">  
+          <div class="hidden md:block md:basis-1/3  lg:basis-1/2 ">
+            <img src="./images/matrix.png" alt="#" class="lg:absolute lg:bottom-0">  
           </div>
           <!-- Right Content -->
-          <div class="basis-1/2">
+          <div class="md:basis-2/3 lg:basis-1/2">
             <!-- Right Content Container -->
-            <div class="flex flex-col justify-center py-10">
+            <div class="flex flex-col justify-center py-10 w-3/4 md:w-full">
               <h3 class="tracking-wider text-vage-melon">ACTİON, DRAMA, THRILLER</h3>
               <h2 class="mb-2">Matrix Reloaded</h2>
               <p class="text-sm mb-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, reprehenderit voluptate eos impedit saepe dignissimos fugit ipsam? Nisi, non commodi.</p>
@@ -321,7 +321,7 @@
             </div>
           </div>
           <!-- Oldie -->
-          <div class="absolute -top-12 left-0 w-24 h-24 bg-vage-melon rounded-full text-center flex items-center">
+          <div class=" left-6 lg:pl-0 absolute md:-top-12 -top-16 w-24 h-24 bg-vage-melon rounded-full text-center flex items-center">
             <p class="font-gemunu uppercase font-bold text-xl text-vage-red -rotate-45">Oldie & Goldie</p>
           </div>
       </div>
