--- a/public/index.html
+++ b/public/index.html
@@ -303,7 +303,7 @@
     </section>
 
     <!-- Matrix -->
-    <section class="bg-vage-white mb-24">
+    <section class="bg-vage-white">
       <!-- Matrix Container-->
       <div class="container flex items-center justify-center relative pl-10 lg:pl-0">
           <!-- Left Content -->
@@ -324,6 +324,124 @@
           <div class=" left-6 lg:pl-0 absolute md:-top-12 -top-16 w-24 h-24 bg-vage-melon rounded-full text-center flex items-center">
             <p class="font-gemunu uppercase font-bold text-xl text-vage-red -rotate-45">Oldie & Goldie</p>
           </div>
+      </div>
+    </section>
+
+    <!-- Blog -->
+    <section class="py-24 bg-black text-vage-grey">
+      <!-- Container -->
+      <div class="container">
+        <!-- Title -->
+        <h2 class="text-vage-red"><a href="#">Popular Posts</a></h2>
+        <!-- Grid Area -->
+        <div class="grid grid-cols-6 gap-10">
+
+          <!-- Item 1 -->
+          <div class="col-span-3 border border-vage-red">
+            <!-- Item 1 Header -->
+            <div class="border-b border-vage-red p-4 flex items-center justify-between">
+              <h3>ACCUSANTIUM DOLOREMQUE LAUDANT...</h3>
+              <img src="./images/userava1.jpg" alt="#" class="rounded-full">
+            </div>
+            <!-- Item 1 paragraph -->
+            <p class="p-4 text-sm">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis sunt quidem voluptates non iste quae quos necessitatibus doloremque tenetur ex?.</p>
+            <!-- Item 1 Footer -->
+            <div class="borde-t border-vage-red p-4 flex items-center justify-end space-x-4 font-bold font-gemunu text-xs">
+              <p>ON DEC 20, 2023</p>
+              <div class="flex items-center justify-center space-x-1">
+                <i class="fa-regular fa-comment"></i>
+                <p>17</p>
+                <i class="fa-regular fa-heart"></i>
+                <p>08</p>
+              </div>
+            </div>
+          </div>
+
+          <!-- Item 2 -->
+          <div class="col-span-3 border border-vage-red">
+            <!-- Item 2 Header -->
+            <div class="border-b border-vage-red p-4 flex items-center justify-between">
+              <h3>ACCUSANTIUM DOLOREMQUE LAUDANT...</h3>
+              <img src="./images/userava1.jpg" alt="#" class="rounded-full">
+            </div>
+            <!-- Item 2 paragraph -->
+            <p class="p-4 text-sm">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis sunt quidem voluptates non iste quae quos necessitatibus doloremque tenetur ex?.</p>
+            <!-- Item 2 Footer -->
+            <div class="borde-t border-vage-red p-4 flex items-center justify-end space-x-4 font-bold font-gemunu text-xs">
+              <p>ON DEC 20, 2023</p>
+              <div class="flex items-center justify-center space-x-1">
+                <i class="fa-regular fa-comment"></i>
+                <p>17</p>
+                <i class="fa-regular fa-heart"></i>
+                <p>08</p>
+              </div>
+            </div>
+          </div>
+
+          <!-- Item 3 -->
+          <div class="col-span-2 border border-vage-red">
+            <!-- Item 3 Header -->
+            <div class="border-b border-vage-red p-4 flex items-center justify-between">
+              <h3>ACCUSANTIUM DOLOREMQUE LAUDANT...</h3>
+              <img src="./images/userava1.jpg" alt="#" class="rounded-full">
+            </div>
+            <!-- Item 3 paragraph -->
+            <p class="p-4 text-sm">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis sunt quidem voluptates non iste quae quos necessitatibus doloremque tenetur ex?.</p>
+            <!-- Item 3 Footer -->
+            <div class="borde-t border-vage-red p-4 flex items-center justify-end space-x-4 font-bold font-gemunu text-xs">
+              <p>ON DEC 20, 2023</p>
+              <div class="flex items-center justify-center space-x-1">
+                <i class="fa-regular fa-comment"></i>
+                <p>17</p>
+                <i class="fa-regular fa-heart"></i>
+                <p>08</p>
+              </div>
+            </div>
+          </div>
+
+          <!-- Item 4 -->
+          <div class="col-span-2 border border-vage-red">
+            <!-- Item 4 Header -->
+            <div class="border-b border-vage-red p-4 flex items-center justify-between">
+              <h3>ACCUSANTIUM DOLOREMQUE LAUDANT...</h3>
+              <img src="./images/userava1.jpg" alt="#" class="rounded-full">
+            </div>
+            <!-- Item 4 paragraph -->
+            <p class="p-4 text-sm">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis sunt quidem voluptates non iste quae quos necessitatibus doloremque tenetur ex?.</p>
+            <!-- Item 4 Footer -->
+            <div class="borde-t border-vage-red p-4 flex items-center justify-end space-x-4 font-bold font-gemunu text-xs">
+              <p>ON DEC 20, 2023</p>
+              <div class="flex items-center justify-center space-x-1">
+                <i class="fa-regular fa-comment"></i>
+                <p>17</p>
+                <i class="fa-regular fa-heart"></i>
+                <p>08</p>
+              </div>
+            </div>
+          </div>
+
+          <!-- Item 5 -->
+          <div class="col-span-2 border border-vage-red">
+            <!-- Item 5 Header -->
+            <div class="border-b border-vage-red p-4 flex items-center justify-between">
+              <h3>ACCUSANTIUM DOLOREMQUE LAUDANT...</h3>
+              <img src="./images/userava1.jpg" alt="#" class="rounded-full">
+            </div>
+            <!-- Item 5 paragraph -->
+            <p class="p-4 text-sm">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis sunt quidem voluptates non iste quae quos necessitatibus doloremque tenetur ex?.</p>
+            <!-- Item 5 Footer -->
+            <div class="borde-t border-vage-red p-4 flex items-center justify-end space-x-4 font-bold font-gemunu text-xs">
+              <p>ON DEC 20, 2023</p>
+              <div class="flex items-center justify-center space-x-1">
+                <i class="fa-regular fa-comment"></i>
+                <p>17</p>
+                <i class="fa-regular fa-heart"></i>
+                <p>08</p>
+              </div>
+            </div>
+          </div>
+          
+        </div>
       </div>
     </section>
 
