--- a/public/index.html
+++ b/public/index.html
@@ -330,14 +330,14 @@
     <!-- Blog -->
     <section class="py-24 bg-black text-vage-grey">
       <!-- Container -->
-      <div class="container">
+      <div class="container px-10 xl:px-0">
         <!-- Title -->
         <h2 class="text-vage-red"><a href="#">Popular Posts</a></h2>
         <!-- Grid Area -->
         <div class="grid grid-cols-6 gap-10">
 
           <!-- Item 1 -->
-          <div class="col-span-3 border border-vage-red">
+          <div class="col-span-6 md:col-span-3 border border-vage-red">
             <!-- Item 1 Header -->
             <div class="border-b border-vage-red p-4 flex items-center justify-between">
               <h3>ACCUSANTIUM DOLOREMQUE LAUDANT...</h3>
@@ -358,7 +358,7 @@
           </div>
 
           <!-- Item 2 -->
-          <div class="col-span-3 border border-vage-red">
+          <div class="col-span-6 md:col-span-3 border border-vage-red">
             <!-- Item 2 Header -->
             <div class="border-b border-vage-red p-4 flex items-center justify-between">
               <h3>ACCUSANTIUM DOLOREMQUE LAUDANT...</h3>
@@ -379,7 +379,7 @@
           </div>
 
           <!-- Item 3 -->
-          <div class="col-span-2 border border-vage-red">
+          <div class="col-span-6 md:col-span-3 lg:col-span-2 border border-vage-red">
             <!-- Item 3 Header -->
             <div class="border-b border-vage-red p-4 flex items-center justify-between">
               <h3>ACCUSANTIUM DOLOREMQUE LAUDANT...</h3>
@@ -400,7 +400,7 @@
           </div>
 
           <!-- Item 4 -->
-          <div class="col-span-2 border border-vage-red">
+          <div class="col-span-6 md:col-span-3 lg:col-span-2 border border-vage-red">
             <!-- Item 4 Header -->
             <div class="border-b border-vage-red p-4 flex items-center justify-between">
               <h3>ACCUSANTIUM DOLOREMQUE LAUDANT...</h3>
@@ -421,7 +421,7 @@
           </div>
 
           <!-- Item 5 -->
-          <div class="col-span-2 border border-vage-red">
+          <div class="col-span-6 md:hidden lg:block lg:col-span-2 border border-vage-red">
             <!-- Item 5 Header -->
             <div class="border-b border-vage-red p-4 flex items-center justify-between">
               <h3>ACCUSANTIUM DOLOREMQUE LAUDANT...</h3>
