--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,7 @@
               <!-- Signup -->
               <div class="flex items-center space-x-4 lg:space-x-8 lg:text-lg">
                 <a href="#">Login</a>
-                <a href="#" class="bg-vage-red px-3 py-1 hover:bg-rose-600 hover:text-vage-grey cursor-pointer transition duration-500 whitespace-nowrap">Sign Up</a>
+                <a href="#" class="bg-vage-red px-3 py-1 hover:bg-rose-600 hover:text-vage-grey cursor-pointer transition duration-500 whitespace-nowrap ">Sign Up</a>
               </div>
             </div>
         </nav>
@@ -118,7 +118,7 @@
           <!-- Images Container -->
           <div class="flex flex-wrap">
             <!-- Image 1 -->
-            <div class="group relative overflow-hidden basis-1/3 md:basis-1/4 lg:basis-1/3">
+            <div class="rounded-md group relative overflow-hidden basis-1/3 md:basis-1/4 lg:basis-1/3">
               <img src="./images/mv1.jpg" alt="#" class="group-hover:scale-110 group-hover:opacity-50 duration-500">
               <!-- Image Detail Container -->
               <div class="absolute px-6 bottom-8">
@@ -132,7 +132,7 @@
               </div>
             </div>
             <!-- Image 2 -->
-            <div class="group relative overflow-hidden basis-1/3 md:basis-1/4 lg:basis-1/3">
+            <div class="rounded-md group relative overflow-hidden basis-1/3 md:basis-1/4 lg:basis-1/3">
               <img src="./images/mv2.jpg" alt="#" class="group-hover:scale-110 group-hover:opacity-50 duration-500">
               <!-- Image Detail Container -->
               <div class="absolute px-6 bottom-8">
@@ -146,7 +146,7 @@
               </div>
             </div>
             <!-- Image 3 -->
-            <div class="group relative overflow-hidden basis-1/3 md:basis-1/4 lg:basis-1/3">
+            <div class="rounded-md group relative overflow-hidden basis-1/3 md:basis-1/4 lg:basis-1/3">
               <img src="./images/mv3.jpg" alt="#" class="group-hover:scale-110 group-hover:opacity-50 duration-500">
               <!-- Image Detail Container -->
               <div class="absolute px-6 bottom-8">
@@ -160,7 +160,7 @@
               </div>
             </div>
             <!-- Image 4 -->
-            <div class="group relative overflow-hidden basis-1/3 md:basis-1/4 lg:basis-1/3">
+            <div class="rounded-md group relative overflow-hidden basis-1/3 md:basis-1/4 lg:basis-1/3">
               <img src="./images/mv4.jpg" alt="#" class="group-hover:scale-110 group-hover:opacity-50 duration-500">
               <!-- Image Detail Container -->
               <div class="absolute px-6 bottom-8">
@@ -174,7 +174,7 @@
               </div>
             </div>
             <!-- Image 5 -->
-            <div class="group relative overflow-hidden basis-1/3 md:basis-1/4 lg:basis-1/3">
+            <div class="rounded-md group relative overflow-hidden basis-1/3 md:basis-1/4 lg:basis-1/3">
               <img src="./images/mv5.jpg" alt="#" class="group-hover:scale-110 group-hover:opacity-50 duration-500">
               <!-- Image Detail Container -->
               <div class="absolute px-6 bottom-8">
@@ -188,7 +188,7 @@
               </div>
             </div>
             <!-- Image 6 -->
-            <div class="group relative overflow-hidden basis-1/3 md:basis-1/4 lg:basis-1/3">
+            <div class="rounded-md group relative overflow-hidden basis-1/3 md:basis-1/4 lg:basis-1/3">
               <img src="./images/mv6.jpg" alt="#" class="group-hover:scale-110 group-hover:opacity-50 duration-500">
               <!-- Image Detail Container -->
               <div class="absolute px-6 bottom-8">
@@ -202,7 +202,7 @@
               </div>
             </div>
             <!-- Image 7 -->
-            <div class="group relative overflow-hidden basis-1/3 md:basis-1/4 lg:basis-1/3 hidden md:block lg:hidden">
+            <div class="rounded-md group relative overflow-hidden basis-1/3 md:basis-1/4 lg:basis-1/3 hidden md:block lg:hidden">
               <img src="./images/mv6.jpg" alt="#" class="group-hover:scale-110 group-hover:opacity-50 duration-500">
               <!-- Image Detail Container -->
               <div class="absolute px-6 bottom-8">
@@ -216,7 +216,7 @@
               </div>
             </div>
             <!-- Image 8 -->
-            <div class="group relative overflow-hidden basis-1/3 md:basis-1/4 lg:basis-1/3 hidden md:block lg:hidden">
+            <div class="rounded-md group relative overflow-hidden basis-1/3 md:basis-1/4 lg:basis-1/3 hidden md:block lg:hidden">
               <img src="./images/mv6.jpg" alt="#" class="group-hover:scale-110 group-hover:opacity-50 duration-500">
               <!-- Image Detail Container -->
               <div class="absolute px-6 bottom-8">
@@ -241,7 +241,7 @@
             <div class="flex items-center group basis-3/4 md:basis-1/2">
               <!-- News Images Container-->
               <div class="basis-1/3 h-full">
-                <img src="./images/new1.jpg" alt="#" class="w-full h-full object-cover">
+                <img src="./images/new1.jpg" alt="#" class="w-full h-full object-cover rounded-md">
               </div>
               <!--- Item Detail -->
               <div class="pl-8 basis-2/3 text-vage-grey group-hover:text-vage-melon group-hover:cursor-pointer duration-500">
@@ -253,7 +253,7 @@
             <div class="flex items-center group basis-3/4 md:basis-1/2">
               <!-- News Images Container-->
               <div class="basis-1/3 h-full">
-                <img src="./images/new1.jpg" alt="#" class="w-full h-full object-cover">
+                <img src="./images/new1.jpg" alt="#" class="rounded-md w-full h-full object-cover">
               </div>
               <!--- Item Detail -->
               <div class="pl-8 basis-2/3 text-vage-grey group-hover:text-vage-melon group-hover:cursor-pointer duration-500">
@@ -265,7 +265,7 @@
             <div class="flex items-center group basis-3/4 md:basis-1/2">
               <!-- News Images Container-->
               <div class="basis-1/3 h-full">
-                <img src="./images/new1.jpg" alt="#" class="w-full h-full object-cover">
+                <img src="./images/new1.jpg" alt="#" class="rounded-md w-full h-full object-cover">
               </div>
               <!--- Item Detail -->
               <div class="pl-8 basis-2/3 text-vage-grey group-hover:text-vage-melon group-hover:cursor-pointer duration-500">
@@ -277,7 +277,7 @@
             <div class="flex items-center group basis-3/4 md:basis-1/2">
               <!-- News Images Container-->
               <div class="basis-1/3 h-full">
-                <img src="./images/new1.jpg" alt="#" class="w-full h-full object-cover">
+                <img src="./images/new1.jpg" alt="#" class="rounded-md w-full h-full object-cover">
               </div>
               <!--- Item Detail -->
               <div class="pl-8 basis-2/3 text-vage-grey group-hover:text-vage-melon group-hover:cursor-pointer duration-500">
@@ -289,7 +289,7 @@
             <div class="flex items-center group basis-3/4 md:basis-1/2 md:hidden lg:flex">
               <!-- News Images Container-->
               <div class="basis-1/3 h-full">
-                <img src="./images/new1.jpg" alt="#" class="w-full h-full object-cover">
+                <img src="./images/new1.jpg" alt="#" class="rounded-md w-full h-full object-cover">
               </div>
               <!--- Item Detail -->
               <div class="pl-8 basis-2/3 text-vage-grey group-hover:text-vage-melon group-hover:cursor-pointer duration-500">
@@ -337,7 +337,7 @@
         <div class="grid grid-cols-6 gap-10">
 
           <!-- Item 1 -->
-          <div class="col-span-6 md:col-span-3 border border-vage-red">
+          <div class="col-span-6 md:col-span-3 border border-vage-red rounded-md">
             <!-- Item 1 Header -->
             <div class="border-b border-vage-red p-4 flex items-center justify-between">
               <h3>ACCUSANTIUM DOLOREMQUE LAUDANT...</h3>
@@ -358,7 +358,7 @@
           </div>
 
           <!-- Item 2 -->
-          <div class="col-span-6 md:col-span-3 border border-vage-red">
+          <div class="col-span-6 md:col-span-3 border border-vage-red rounded-md">
             <!-- Item 2 Header -->
             <div class="border-b border-vage-red p-4 flex items-center justify-between">
               <h3>ACCUSANTIUM DOLOREMQUE LAUDANT...</h3>
@@ -379,7 +379,7 @@
           </div>
 
           <!-- Item 3 -->
-          <div class="col-span-6 md:col-span-3 lg:col-span-2 border border-vage-red">
+          <div class="col-span-6 md:col-span-3 lg:col-span-2 border border-vage-red rounded-md">
             <!-- Item 3 Header -->
             <div class="border-b border-vage-red p-4 flex items-center justify-between">
               <h3>ACCUSANTIUM DOLOREMQUE LAUDANT...</h3>
@@ -400,7 +400,7 @@
           </div>
 
           <!-- Item 4 -->
-          <div class="col-span-6 md:col-span-3 lg:col-span-2 border border-vage-red">
+          <div class="col-span-6 md:col-span-3 lg:col-span-2 border border-vage-red rounded-md">
             <!-- Item 4 Header -->
             <div class="border-b border-vage-red p-4 flex items-center justify-between">
               <h3>ACCUSANTIUM DOLOREMQUE LAUDANT...</h3>
@@ -421,7 +421,7 @@
           </div>
 
           <!-- Item 5 -->
-          <div class="col-span-6 md:hidden lg:block lg:col-span-2 border border-vage-red">
+          <div class="col-span-6 md:hidden lg:block lg:col-span-2 border border-vage-red rounded-md">
             <!-- Item 5 Header -->
             <div class="border-b border-vage-red p-4 flex items-center justify-between">
               <h3>ACCUSANTIUM DOLOREMQUE LAUDANT...</h3>
@@ -444,6 +444,38 @@
         </div>
       </div>
     </section>
+
+    <!-- Footer -->
+    <footer class="bg-black text-vage-grey">
+      <!-- Footer Container -->
+      <div class="container flex pb-8">
+        <!-- Left Content -->
+        <div class="basis-1/3">
+          <a href="#" class=" text-2xl lg:text-3xl font-bold text-transparent bg-gradient-to-r bg-clip-text from-vage-red to-vage-grey">VEGE</a>
+          <p class="text-sm mt-2">2023 VegeSoft No &copy; COPYRIGHT</p>
+        </div>
+        <!-- Middle Content -->
+        <div class="basis-1/3">
+          <h2 class="mb-2 text-vage-red">LINKS</h2>
+          <div class="grid grid-cols-5 gap-2 uppercase">
+            <a href="#" class="col-span-2 hover:text-vage-melon duration-500">Movies</a>
+            <a href="#" class="col-span-2 hover:text-vage-melon duration-500">Celebrities</a>
+            <a href="#" class="col-span-2 hover:text-vage-melon duration-500">Blog</a>
+            <a href="#" class="col-span-2 hover:text-vage-melon duration-500">News</a>
+            <a href="#" class="col-span-2 hover:text-vage-melon duration-500">About</a>
+          </div>
+        </div>
+        <!-- Right Content -->
+        <div class="basis-1/3">
+          <h2 class="mb-2 text-vage-red">FOLLOW US</h2>
+          <form action="">
+            <input class="py-1 px-2 bg-transparent border border-vage-red rounded-md placeholder:text-xs outline-none" placeholder="TYPE YOUR E-MAİL" type="text">
+            <button class="py-1 px-2 bg-transparent border border-vage-red rounded-md bg-vage-red font-gemunu uppercase hover:bg-transparent duration-500">Subscribe</button>
+          </form>
+        </div>
+            
+      </div>
+    </footer>
 
   </body>
 </html>
