--- a/public/index.html
+++ b/public/index.html
@@ -448,7 +448,7 @@
     <!-- Footer -->
     <footer class="bg-black text-vage-grey">
       <!-- Footer Container -->
-      <div class="container flex pb-8">
+      <div class="container flex flex-col md:flex-row px-10 lg:px-0 pb-8">
         <!-- Left Content -->
         <div class="basis-1/3">
           <a href="#" class=" text-2xl lg:text-3xl font-bold text-transparent bg-gradient-to-r bg-clip-text from-vage-red to-vage-grey">VEGE</a>
@@ -468,7 +468,7 @@
         <!-- Right Content -->
         <div class="basis-1/3">
           <h2 class="mb-2 text-vage-red">FOLLOW US</h2>
-          <form action="">
+          <form action="" class="flex">
             <input class="py-1 px-2 bg-transparent border border-vage-red rounded-md placeholder:text-xs outline-none" placeholder="TYPE YOUR E-MAİL" type="text">
             <button class="py-1 px-2 bg-transparent border border-vage-red rounded-md bg-vage-red font-gemunu uppercase hover:bg-transparent duration-500">Subscribe</button>
           </form>
