--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <link href="./css/styles.css" rel="stylesheet" />
     <title>My Tailwind CSS Website</title>
   </head>
-  <body class="font-open dark">
+  <body class="font-open dark ">
 
     <!-- Dark/Light Toggle -->
     <div class="absolute top-1 left-5 cursor-pointer text-lg">
@@ -452,7 +452,7 @@
     </section>
 
     <!-- Footer -->
-    <footer class="dark:bg-black bg-vage-grey dark:text-vage-grey text-black border-t border-vage-red mb-4">
+    <footer class="dark:bg-black bg-vage-grey dark:text-vage-grey text-black border-t border-vage-red py-4">
       <!-- Footer Container -->
       <div class="container flex flex-col md:flex-row px-10 lg:px-0 pb-8">
         <!-- Left Content -->
