--- a/public/index.html
+++ b/public/index.html
@@ -85,14 +85,14 @@
           <div class="flex space-x-8 opacity-0 group-hover:opacity-100 group-hover:mb-10 lg:group-hover:mb-20 duration-1000">
             <!--Watch-->
             <div class="flex space-x-2 items-center cursor-pointer">
-              <a href="#" class="text-black dark:text-vage-grey uppercase lg:text-lg hover\:text-vage-red duration-500">watch trailer</a>
+              <a href="#" class="text-black dark:text-vage-grey uppercase lg:text-lg dark:hover:text-vage-red hover:text-vage-red duration-500">watch trailer</a>
               <div class="flex h-8 w-8 text-center items-center rounded-full justify-center bg-vage-red text-black dark:text-vage-grey">
                 <i class="fas fa-play"></i>
               </div>
             </div>
              <!--Synopsis-->
              <div class="flex space-x-2 items-center cursor-pointer">
-              <a href="#" class="text-black dark:text-vage-grey uppercase lg:text-lg hover\:text-vage-red duration-500">FULL SYNOPSIS</a>
+              <a href="#" class="text-black dark:text-vage-grey uppercase lg:text-lg dark:hover:text-vage-red hover:text-vage-red duration-500">FULL SYNOPSIS</a>
               <div class="flex h-8 w-8 text-center items-center rounded-full justify-center bg-vage-red text-black dark:text-vage-grey">
                 <i class="fas fa-arrow-right"></i>
               </div>
